--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1218,16 +1218,16 @@
   "EVENT_ACTOR_INVOKE_LABEL": "Invoke {actor} Interact Script",
   "EVENT_ACTOR_GET_POSITION_LABEL": "Store {actor} Position In Variables {{x},{y}}",
   "EVENT_ACTOR_GET_DIRECTION_LABEL": "Store {actor} Direction In Variable {variable}",
-  "EVENT_ACTOR_SET_FRAME_LABEL": "{actor} Set Animation Frame To {frame}",
-  "EVENT_ACTOR_SET_ANIMATION_SPEED_LABEL": "{actor} Set Animation Speed To {speed}",
-  "EVENT_ACTOR_SET_STATE_LABEL": "{actor} Set Animation State To {state}",
+  "EVENT_ACTOR_SET_FRAME_LABEL": "Set {actor} Animation Frame To {frame}",
+  "EVENT_ACTOR_SET_ANIMATION_SPEED_LABEL": "Set {actor} Animation Speed To {speed}",
+  "EVENT_ACTOR_SET_STATE_LABEL": "Set {actor} Animation State To {state}",
   "EVENT_ACTOR_COLLISIONS_DISABLE_LABEL": "{actor} Disable Collisions",
   "EVENT_ACTOR_COLLISIONS_ENABLE_LABEL": "{actor} Enable Collisions",
-  "EVENT_ACTOR_SET_DIRECTION_LABEL": "{actor} Set Direction {direction}",
-  "EVENT_ACTOR_SET_MOVEMENT_SPEED_LABEL": "{actor} Set Movement Speed To {speed} Pixels Per Frame",
-  "EVENT_ACTOR_SET_POSITION_LABEL": "{actor} Set Position To {{x},{y}}",
-  "EVENT_ACTOR_SET_POSITION_RELATIVE_LABEL": "{actor} Set Position Relative By {{x},{y}}",
-  "EVENT_ACTOR_SET_SPRITE_LABEL": "{actor} Set Sprite Sheet To {spriteSheet}",
+  "EVENT_ACTOR_SET_DIRECTION_LABEL": "Set {actor} Direction To {direction}",
+  "EVENT_ACTOR_SET_MOVEMENT_SPEED_LABEL": "Set {actor} Movement Speed To {speed} Pixels Per Frame",
+  "EVENT_ACTOR_SET_POSITION_LABEL": "Set {actor} Position To {{x},{y}}",
+  "EVENT_ACTOR_SET_POSITION_RELATIVE_LABEL": "Set {actor} Position Relative By {{x},{y}}",
+  "EVENT_ACTOR_SET_SPRITE_LABEL": "Set {actor} Sprite Sheet To {spriteSheet}",
   "EVENT_ACTOR_EMOTE_LABEL": "{actor} Emote {emote}",
   "EVENT_ACTOR_STOP_UPDATE_LABEL": "{actor} Stop \"On Update\" Script",
   "EVENT_ACTOR_START_UPDATE_LABEL": "{actor} Start \"On Update\" Script",
